--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
 <head> 
-<body style="background-color:LightGrey; width=100% margin:100% padding:100%">
+<body style="background-color:lightgrey; width=100% margin:100% padding:100%">
 
 
 <ul style="font-family:Courier; color:Black; font-size: 18px; border:3px; border-style:solid; border-color:White; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>
