--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <body style="background-color:lightgrey; width=100% margin:100% padding:100%">
 
 
-<ul style="font-family:Courier; color:Black; font-size: 18px; border:3px; border-style:solid; border-color:White; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>
+<ul style="font-family:Courier; color:Black; font-size: 18px; border:3px; border-style:solid; width border-color:Black; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>
   <li> Click <a href="PrREADME.html">here</a> to open Link to Member 1's Wesbite </li>
   <li> Click <a href="Personality.html">here</a> to open Link to Member 2's Wesbite </li>
   <li> Click <a href="Ideal Job.html">here</a> to open Link to Member 3's Wesbite</li>
 </ul>
 </p>
 
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -27,22 +29,19 @@
 <img src="Black Sample Photo.jpg" style="float:left;" class="border" hspace="20">
 
 <p style="font-family:Courier; color:Black; font-size: 21px;"> <b> PERSONAL INFORMATION - One paragraph her person (OR OTHER TITLE NAME)</b>
-<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simpley delete code from the nearest <p style="font-family:Courier; color:LightGrey; font-size: 16px;"> to the last </p> Inclusive of the image insert if the image is also not required. 
+<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete code from the nearest code before this text starting with <p and finishing with /p>. Inclusive of the image insert if the image is also not required. 
  <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20"> 
  </p>
+  
 <br> - Breaks may increase certain spacings between paragraphs if the text appears to be too cluttered or to aid in the assembly of pictures with text wrap. Optional extras to included, in between paragraph spacing. 
 
 <p style="font-family:Courier; color:Black; font-size: 21px;"> <b>TEAM PROFILE (OR OTHER TITLE NAME) - As the 3 test outcomes for each member will becomes quite extensive in content. Perhaps it would be beneficial to place this section on another page??? To be discussed. </b>
-<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simpley delete code from the nearest <p style="font-family:Courier; color:Black; font-size: 16px;"> to the last </p> Inclusive of the image insert if the image is also not required. 
+<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required.Simply delete code from the nearest code before this text starting with <p and finishing with /p>. Inclusive of the image insert if the image is also not required. 
  <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20"> 
- </p>
 
 <p style="font-family:Courier; color:Black; font-size: 21px;"> <b>IDEAL JOBS AND COMPARISON (OR OTHER TITLE NAME) </b>
-<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simpley delete code from the nearest <p style="font-family:Courier; color:Black; font-size: 16px;"> to the last </p> Inclusive of the image insert if the image is also not required. 
+<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete code from the nearest code before this text starting with <p and finishing with /p>. Inclusive of the image insert if the image is also not required. 
  <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20"> 
- </p>
-
-
 
 </body>
 </html>
