--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <p style="float:left;">
-<img src="Black Sample Photo.jpg" style="float:left;" class="border" hspace="20">
+<img src="Black Sample Photo.jpg" style="float:left;" class="border" hspace="20" width="600" height="500>
 
 <p style="font-family:Courier; color:Black; font-size: 21px;"> <b> PERSONAL INFORMATION - One paragraph her person (OR OTHER TITLE NAME)</b>
 <p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete section. Inclusive of the image insert if the image is also not required. 
@@ -37,12 +37,12 @@
 
 <p style="font-family:Courier; color:Black; font-size: 21px;"> <b>TEAM PROFILE (OR OTHER TITLE NAME) - As the 3 test outcomes for each member will becomes quite extensive in content. Perhaps it would be beneficial to place this section on another page??? To be discussed. </b>
 <p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE.  Should this paragraph not be required. Simply delete section. Inclusive of the image insert if the image is also not required. 
- <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20"> 
+ <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20" width="600" height="500> 
  </p>
   
 <p style="font-family:Courier; color:Black; font-size: 21px;"> <b>IDEAL JOBS AND COMPARISON (OR OTHER TITLE NAME) </b>
 <p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete section. Inclusive of the image insert if the image is also not required. 
- <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20"> 
+ <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20" width="600" height="500> 
  </p>
   
 
