--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 <ul style="font-family:Courier; color:Black; font-size: 18px; border:3px; border-style:solid; width border-color:Black; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>
-  <li> Click <a href="PrREADME.html">here</a> to open Link to Member 1's Wesbite </li>
+  <li> Click <a href="Tester.html">here</a> to open Link to Test Wesbite </li>
   <li> Click <a href="Personality.html">here</a> to open Link to Member 2's Wesbite </li>
   <li> Click <a href="Ideal Job.html">here</a> to open Link to Member 3's Wesbite</li>
 </ul>
