--- a/Tester.html
+++ b/Tester.html
@@ -70,22 +70,19 @@ footer {
 </head>
 <body>
 
-<h2>CSS Layout Float</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
-
 <header>
-  <h2>Cities</h2>
+  <h2>CONCERTED</h2>
 </header>
 
 <section>
   <nav>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul>
+    <ul style="font-family:Courier; color:Black; font-size: 18px; border:3px; border-style:solid; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>>
+  <li> Click <a href="Tester.html">here</a> to open Link to Test Wesbite </li>
+  <li> Click <a href="Personality.html">here</a> to open Link to Member 2's Wesbite </li>
+  <li> Click <a href="Ideal Job.html">here</a> to open Link to Member 3's Wesbite </li>
+  </ul>
   </nav>
+  
   
   <article>
     <h1>London</h1>
