--- a/Tester.html
+++ b/Tester.html
@@ -24,7 +24,7 @@ header {
 /* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
-  width: 30%;
+  width: 25%;
   height: 300px; /* only for demonstration, should be removed */
   background: #ccc;
   padding: 20px;
@@ -71,12 +71,12 @@ footer {
 <body>
 
 <header>
-  <h2>CONCERTED</h2>
+  <h2 style="font-family:Courier; color:Black; font-size: 24px">CONCERTED</h2>
 </header>
 
 <section>
   <nav>
-    <ul style="font-family:Courier; color:Black; font-size: 18px; border:3px; border-style:solid; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>>
+    <ul style="font-family:Courier; color:Black; font-size: 16px; border:3px; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>>
   <li> Click <a href="Tester.html">here</a> to open Link to Test Wesbite </li>
   <li> Click <a href="Personality.html">here</a> to open Link to Member 2's Wesbite </li>
   <li> Click <a href="Ideal Job.html">here</a> to open Link to Member 3's Wesbite </li>
