--- a/Tester.html
+++ b/Tester.html
@@ -71,12 +71,12 @@ footer {
 <body>
 
 <header>
-  <h2 style="font-family:Courier; color:Black; font-size: 24px">CONCERTED</h2>
+  <h2 style="font-family:Courier; color:Black; font-size: 28x">CONCERTED IT PROJECTS</h2>
 </header>
 
 <section>
   <nav>
-    <ul style="font-family:Courier; color:Black; font-size: 16px; border:3px; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>>
+    <ul style="font-family:Courier; color:Black; font-size: 16px; border:3px; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>
   <li> Click <a href="Tester.html">here</a> to open Link to Test Wesbite </li>
   <li> Click <a href="Personality.html">here</a> to open Link to Member 2's Wesbite </li>
   <li> Click <a href="Ideal Job.html">here</a> to open Link to Member 3's Wesbite </li>
@@ -85,9 +85,10 @@ footer {
   
   
   <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+    <p style="font-family:Courier; color:Black; font-size: 21px;"> <b> PERSONAL INFORMATION - One paragraph her person (OR OTHER TITLE NAME)</b>
+<p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete section. Inclusive of the image insert if the image is also not required. 
+ <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20" width="300" height="200"> 
+ </p>
   </article>
 </section>
 
