--- a/Tester.html
+++ b/Tester.html
@@ -18,14 +18,14 @@ header {
   padding: 30px;
   text-align: center;
   font-size: 35px;
-  color: white;
+  color: black;
 }
 
 /* Create two columns/boxes that floats next to each other */
 nav {
   float: left;
   width: 25%;
-  height: 300px; /* only for demonstration, should be removed */
+  height: 100%; /* only for demonstration, should be removed */
   background: #ccc;
   padding: 20px;
 }
@@ -39,9 +39,9 @@ nav ul {
 article {
   float: left;
   padding: 20px;
-  width: 70%;
+  width: 75%;
   background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
+  height: 70%;
 }
 
 /* Clear floats after the columns */
@@ -55,8 +55,10 @@ section:after {
 footer {
   background-color: #777;
   padding: 10px;
+  width: 100%;
+  height: 15%;
   text-align: center;
-  color: white;
+  color: black;
 }
 
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
