--- a/Tester.html
+++ b/Tester.html
@@ -1,6 +1,5 @@
 <html lang="en">
 <head>
-<title>CSS Template</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -9,11 +8,13 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Courier;
 }
 
-/* Style the header */
+
 header {
+  width: 100%;
+  height: 15%;
   background-color: #666;
   padding: 30px;
   text-align: center;
@@ -21,16 +22,16 @@ header {
   color: black;
 }
 
-/* Create two columns/boxes that floats next to each other */
+
 nav {
   float: left;
   width: 25%;
-  height: 100%; /* only for demonstration, should be removed */
+  height: 70%; 
   background: #ccc;
   padding: 20px;
 }
 
-/* Style the list inside the menu */
+
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -44,7 +45,7 @@ article {
   height: 70%;
 }
 
-/* Clear floats after the columns */
+
 section:after {
   content: "";
   display: table;
@@ -93,10 +94,8 @@ footer {
  </p>
   </article>
   
-  <br>
-  
    <article>
-    <p style="font-family:Courier; color:Black; font-size: 21px;"> <b> PERSONAL INFORMATION - One paragraph her person (OR OTHER TITLE NAME)</b>
+    <p style="font-family:Courier; color:Black; font-size: 21px;"> <b> TEAM PROFILE - Test outcomes for every team member and your understanding of how this information may be helpful (OR OTHER TITLE NAME)</b>
 <p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete section. Inclusive of the image insert if the image is also not required. 
  <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20" width="300" height="200"> 
  </p>
