--- a/Tester.html
+++ b/Tester.html
@@ -41,8 +41,9 @@ article {
   float: left;
   padding: 20px;
   width: 75%;
+  height: auto;
   background-color: #f1f1f1;
-  height: 70%;
+  
 }
 
 
@@ -52,7 +53,7 @@ section:after {
   clear: both;
 }
 
-/* Style the footer */
+
 footer {
   background-color: #777;
   padding: 10px;
@@ -62,7 +63,7 @@ footer {
   color: black;
 }
 
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+
 @media (max-width: 600px) {
   nav, article {
     width: 100%;
