--- a/Tester.html
+++ b/Tester.html
@@ -32,13 +32,8 @@ nav {
 }
 
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
 article {
-  float: left;
+  float: right;
   padding: 20px;
   width: 75%;
   height: auto;
