--- a/Tester.html
+++ b/Tester.html
@@ -26,11 +26,15 @@ header {
 nav {
   float: left;
   width: 25%;
-  height: auto; 
+  height: 65%; 
   background: #ccc;
   padding: 20px;
 }
-
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+  
 
 article {
   float: right;
