--- a/Tester.html
+++ b/Tester.html
@@ -114,7 +114,7 @@ footer {
   <br>
      <p style="font-family:Courier; color:Black; font-size: 21px;"> <b> OTHER TITLE NAME </b>
 <p style="font-family:Courier; color:Black; font-size: 16px;"> INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE, INSERT CONTENT HERE. Should this paragraph not be required. Simply delete section. Inclusive of the image insert if the image is also not required. 
- <img src="Black Sample Photo.jpg" style="float:left;" class="border" hspace="20" width="300" height="200"> 
+ <img src="Black Sample Photo.jpg" style="float:right;" class="border" hspace="20" width="300" height="200"> 
  </p>
     
     
