--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ header {
   background-color: #666;
   padding: 10px;
   text-align: center;
-  font-size: 35px;
-  color: black;
+  font-size: 36px;
+  color: #ccc;
 }
 
 
