--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ footer {
 <body>
 
 <header>
-  <h2 style="font-family:Courier; color:Black; font-size: 28x">CONCERTED IT PROJECTS</h2>
+  <h2 style="font-family:Courier; color:#ccc; font-size: 28x">CONCERTED IT PROJECTS</h2>
 </header>
 
 <section>
