--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ footer {
 </head>
 <body>
 
-  ________________________________________________________________________________________________________________________
+  \\__________________Code above this line pertains to the already formatted sections of the webpage__________________________\\
   
   
   
