--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ footer {
 </head>
 <body>
 
+  /* Style the list inside the menu */
   */__________________Code above this line pertains to the already formatted sections of the webpage__________________________
   
   
