--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ footer {
 </head>
 <body>
 
-  /* Style the list inside the menu */
-  */__________________Code above this line pertains to the already formatted sections of the webpage__________________________
   
+  
+  <!-- You will not be able to see this text. -->  
   
   
   
