--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@ footer {
 
   
   
-  <!-- You will not be able to see this text. -->  
+  <!-- Text above this line is related to the preformatting of the webpage sections -->  
+  
+  
+  
   
   
   
