--- a/Ideal Jobs and Comparisons.html
+++ b/Ideal Jobs and Comparisons.html
@@ -89,7 +89,8 @@ footer {
 <section>
   <nav>
     <ul style="font-family:Courier; color:Black; font-size: 16px; border:3px; padding: 1em; float:left;"> <b> DIRECTORY LIST - to various webpages for access and contributions by all </b>
-  <li> Member 1's Website <a href="https://havokpanda.github.io/ASSESS1COMP/">here</a>  </li>
+  <li> Index Page <a href="href="index.html">here</a> </li>
+ <li> Member 1's Website <a href="https://havokpanda.github.io/ASSESS1COMP/">here</a>  </li>
   <li> Member 2's Website <a href="https://glennhorne.github.io/">here</a> </li>
   <li> Member 3's Wesbite <a href="https://bri128.github.io/AssignmentCOSC2196/index.html">here</a>  </li>
   <li> Ideal Jobs and Comparisons <a href="Ideal Jobs and Comparisons.html">here</a> </li>
